<resources>
    <string name="app_name">testingmyapp</string>
    <string name="hello_this_is_splash_screen">Hello This is splash screen</string>
    <string name="this_is_login_screen">This is login screen</string>
    <string name="login">login</string>
    <string name="chat">chat</string>
    <string name="profile">profile</string>
    <string name="explore">explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_their_welcome_back">Hello their Welcome back</string>
    <string name="signin_to_continue">SignIn to Continue</string>
    <string name="username">Username</string>
    <string name="login_to_contine">Login to contine</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="password">password</string>
    <string name="todo">todo</string>
    <string name="name_or_user_id">Name or User ID</string>
    <string name="Username">Username</string>
    <string name="sign_in_to_start_the_journey">Sign in to start the journey</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="passwordd">Password</string>
    <string name="phone_no">Phone No</string>
    <string name="welcome">Welcome</string>
    <string name="forget_password">forget password</string>
    <string name="med_setup">Med Setup</string>
    <string name="webcam_setup">WebCam setup</string>
    <string name="home">Home</string>
    <string name="medicinesetup_fragment">Medicinesetup fragment</string>
    <string name="camera_fargment">camera fargment</string>
    <string name="this_is_camera_fragment">this is camera fragment</string>
    <string name="myaccountfrag">myaccountfrag</string>
    <string name="my_account">My account</string>
    <string name="hello_welcome_back">Welcome Back</string>
    <string name="camera_b">Camera B</string>
    <string name="your_daily_dose_of_medicine">Your daily dose of medicine</string>

    <string name="time_slot">Time Slot</string>
    <string name="when">When</string>


    <string name="_08_00_am">08:00 AM</string>


    <string name="recent_notifications">Recent Notifications</string>
    <string name="don_t_forget_to_take_medicine_1_at_08_00_am">Don\'t forget to take Medicine 1 at 08:00 AM</string>
    <string name="medicine_2_refill_reminder">Medicine 2 refill reminder</string>
    <string name="medicare">Medicare</string>
    <string name="camera_a">Camera A</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="time">Time Slot</string>
    <string name="duration">Duration</string>
    <string name="quantity">Quantity</string>
    <string name="medicine_name_1">Medicine Name 1</string>
    <string name="_08_05_am">08:05 AM</string>
    <string name="before_meal">Before Meal</string>
    <string name="_2_tabs">2 tabs</string>
    <string name="setup_your_medicine">Setup your medicine</string>
    <string name="medicine_setup">medicine setup</string>
    <string name="enter_the_medicine_name">enter the medicine name</string>
    <string name="dosage">Dosage</string>
    <string name="enter_dosage">enter dosage</string>
    <string name="sun">sun</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thurs">thurs</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
    <string name="select_time">Select time</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="schedule_date">Schedule date</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="passs">****</string>
    <string name="passworddd">Password</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="email">Email</string>
    <string name="xyz">xyz</string>
    <string name="user_id">User Id</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="my_accounts">My Accounts</string>
    <string name="select_Time">select time</string>
    <string name="schedule_time">Schedule TIme</string>
    <string name="registation_login">Sign Up</string>
    <string name="registation_username">User Name</string>
    <string name="registaion_email">Email</string>
    <string name="regsitation_pass">Password</string>
    <string name="registation_connecteduser">Connected User</string>
    <string name="registation_Signupbtn">Sign Up</string>
    <string name="registation_login_connectfrag">Already have an account? Login</string>
    <string name="login_loginheader">Login</string>
    <string name="login_loginUsername">User Name</string>
    <string name="login_loginpass">Password</string>
    <string name="login_login_email">Email</string>
    <string name="login_login_conectSignin">New here, Sign In</string>
    <string name="camsetup_header">Setup Your device</string>
    <string name="camsetup_midheader">Connect to Continue</string>
    <string name="camsetup_subheader">Configure Camera: Connect via Bluetooth Settings</string>
    <string name="camsetup_connbtn">Home cam</string>
    <string name="camsetup_help">help</string>'
    <string name="medicine_radio_beforeMeal">Before Meal</string>
    <string name="medicine_radio_afterMeal">After Meal</string>
    <string name="myaccount_username">User Name</string>
    <string name="myaccount_hintname">User Name</string>
    <string name="myaccount_password">Password</string>
    <string name="myaccount_hintpass">password</string>
    <string name="myaccount_connecteduser">Connected User</string>
    <string name="myaccount_saveandcontinuebtn">Save and Continue</string>

    <string name="myaccount_frgbtn">Forgotten your password?</string>
    <string-array name="user_array">
        <item>Elderly person</item>
        <item>Care giver</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>