<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffff"
    android:padding="20dp"
    tools:context=".Login"
    android:layout_marginTop="5dp">


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/applg"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_welcome_back"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:paddingHorizontal="5dp"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_to_continue"
        android:textSize="18sp"
        android:paddingHorizontal="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textColor="#4682B4"
            android:text="@string/forget_password"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:onClick="forgetbncreate"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_contine"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#390075"
            android:paddingHorizontal="5dp"
            android:onClick="createforgetbtn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_sign_up"
            android:background="#00000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            android:textColor="#474747"
            android:onClick="createSignup"
            />

    </LinearLayout>

</LinearLayout>
