<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicineSetupFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:background="@drawable/top_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_your_medicine"
            android:textSize="25sp"
            android:textStyle="bold"

            android:layout_marginBottom="15dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_setup"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/droid_serif"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/medsnamesetup"
            android:textColorHint="@color/black"
            android:hint="@string/enter_the_medicine_name"
            android:layout_marginBottom="2dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="#474747"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medsnameinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:background="@color/white"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textdosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosage"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/droid_serif"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dosagetext"
            android:hint="@string/enter_dosage"
            android:layout_marginBottom="2dp"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black"
            app:hintTextColor="#474747"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dosageinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:background="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/scheduletimetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_time"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:fontFamily="@font/droid_serif"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/timeselectlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            android:focusable="true"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:id="@+id/pickTimetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_time"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <RadioButton
                android:id="@+id/radio_before_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Before Meal"
                android:textSize="18sp"
                android:fontFamily="@font/droid_serif"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_after_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="After Meal"
                android:textSize="18sp"
                android:fontFamily="@font/droid_serif"
                android:textColor="@color/black"
                android:layout_marginStart="38dp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/scheduletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_date"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/sun"
                android:textColor="@color/black"
                app:chipBackgroundColor="#D3D3D3"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/mon"
                app:chipBackgroundColor="#D3D3D3"
                android:textColor="@color/black"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/tue"
                android:textColor="@color/black"
                app:chipBackgroundColor="#D3D3D3"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/wed"
                android:textColor="@color/black"
                app:chipBackgroundColor="#D3D3D3"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/thurs"
                android:textColor="@color/black"
                app:chipBackgroundColor="#D3D3D3"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/fri"
                android:textColor="@color/black"
                app:chipBackgroundColor="#D3D3D3"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/sat"
                android:textColor="@color/black"
                app:chipBackgroundColor="#D3D3D3"/>
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addscheduletext"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="51dp"
            android:text="Add Schedule"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center"
            style="@style/Widget.MyLightButton"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/medicine_schedule_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:dividerHeight="1dp"
            android:textColor="@color/black"/>
    </ScrollView>

</LinearLayout>
